meja/tests/row-empty.stderr
File "tests/row-empty.meja", line 2, characters 23-24:
Error: Incompatible types [<`A] and [<`B]:
       Cannot unify [<`A] and [<`B]: the resulting row would be empty.
