meja/tests/row-empty.meja
let f = fun (x : [< `A], y : [< `B], b) => {
  if (b) { x; } else { y; };
};
